<resources>
    <string name="app_name">Twitter_like</string>
    <string name="twitter">Twitter</string>
    <string name="tweet_profile_picture_content_description">Profile picture</string>
    <string name="tweet_firstname_lastname">Firstname Lastname</string>
    <string name="tweet_username">@susername</string>
    <string name="tweet_publication_date">· 7h</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos illo soluta natus! Obcaecati, eligendi! Earum eum modi commodi consequatur, maiores enim. Vel qui mollitia aliquam aut, itaque dicta consequatur tempora?</string>
    <string name="se_connecter">Se connecter</string>
    <string name="mot_de_passe">Mot de passe</string>
    <string name="email">Email</string>
    <string name="tweet_logo">Tweet logo</string>
    <string name="close">Close</string>
    <string name="inscription">Inscription</string>
    <string name="pas_de_compte_inscrivez_vous">Pas de compte ? Inscrivez-vous.</string>
    <string name="d_j_un_compte_connectez_vous">Déjà un compte ? connectez-vous</string>
    <string name="nav_open">Ouvrir</string>
    <string name="nav_close">Fermer</string>
    <string name="hint_message">Write your message...</string>
    <string name="send_button_desc">Send</string>
    <string name="return_arrow_desc">return arrow</string>
    <string name="add_conversation">Add conversation</string>
    <string name="user_picture">User picture</string>
    <string name="hint_search_user">Find an user</string>
    <string name="image_search">Image search</string>
    <string name="user_check">User check</string>
    <string name="create_group">Create group</string>
    <string name="create_group_image">Create group image</string>
    <string name="message_title">Messages</string>
</resources>