<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageButton
        android:id="@+id/button_return"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/return_arrow_desc"
        android:src="@drawable/arrow_back"
        android:background="@color/noBackground"
        android:layout_margin="10dp">
    </ImageButton>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/image_search"
        android:src="@drawable/search_black"
        android:background="@color/noBackground"
        android:layout_margin="10dp"
        android:layout_gravity="center"/>

    <EditText
        android:id="@+id/search_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:inputType="textFilter"
        android:hint="@string/hint_search_user"
        android:layout_gravity="center"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_create_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/create_group_image"
            android:src="@drawable/group_add"
            android:background="@color/noBackground"
            android:layout_margin="10dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_group"
            android:textColor="@color/blue_message"/>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_search_user"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"/>

</LinearLayout>