<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/user_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="0dp"
    android:background="@drawable/border"
    android:orientation="horizontal">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/user_material_card_view"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginHorizontal="4dp"
        android:layout_marginVertical="4dp"
        app:cardCornerRadius="50dp"
        app:strokeColor="@color/black"
        app:strokeWidth="4dp">

        <ImageView
            android:id="@+id/user_profile_picture"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/tweet_profile_picture_content_description"
            android:src="@drawable/profile_picture2" />
    </com.google.android.material.card.MaterialCardView>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/user_firstname_lastname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="2dp"
                    android:maxLength="20"
                    android:text="@string/tweet_firstname_lastname"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/user_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="2dp"
                    android:maxLength="15"
                    android:text="@string/tweet_username"
                    android:textSize="15sp" />
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/user_biography"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="2dp"
            android:text="@string/lorem_ipsum"
            android:textSize="15sp" />
    </LinearLayout>

    <Button
        android:id="@+id/user_follow_unfollow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Follow"
        android:layout_gravity="end" />
</LinearLayout>
