<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:padding="5dp"
    android:orientation="horizontal">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/tweet_material_card_view"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginHorizontal="4dp"
        android:layout_marginVertical="4dp"
        app:cardCornerRadius="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="@color/black"
        app:strokeWidth="4dp">

        <ImageView
            android:id="@+id/tweet_profile_picture"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/tweet_profile_picture_content_description"
            android:src="@drawable/profile_picture" />
    </com.google.android.material.card.MaterialCardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tweet_firstname_lastname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="2dp"
                android:maxLength="20"
                android:text="@string/tweet_firstname_lastname"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tweet_username_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="2dp"
                android:maxLength="15"
                android:text="@string/tweet_username_id"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tweet_publication_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="2dp"
                android:maxLength="15"
                android:text="@string/tweet_publication_date"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tweet_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="2dp"
                android:layout_marginTop="5dp"
                android:maxLines="5"
                android:text="@string/lorem_ipsum"
                android:textSize="15sp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>