<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.05">

        <ImageButton
            android:id="@+id/button_return"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/return_arrow_desc"
            android:src="@drawable/arrow_back"
            android:layout_gravity="center"
            android:background="@color/noBackground"
            android:layout_margin="10dp">
        </ImageButton>

        <TextView
            android:id="@+id/conversation_username"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="20sp"
            android:layout_gravity="center">
        </TextView>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/message_rv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="8dp"
        android:layout_marginTop="8dp"
        android:clipToPadding="false"
        android:scrollbars="vertical"
        android:layout_weight="0.9"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:padding="8dp"
        android:layout_margin="8dp"
        android:background="@drawable/background_send_message"
        android:layout_weight="0.1">

        <EditText
            android:id="@+id/message_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.95"
            android:autofillHints=""
            android:hint="@string/hint_message"
            android:inputType="textMultiLine"
            android:scrollbars="vertical"
            android:scrollbarAlwaysDrawVerticalTrack="true"
            android:padding="12dp"
            android:gravity="top"
            android:layout_gravity="center"
            android:layout_marginStart="5dp"/>

        <ImageButton
            android:id="@+id/send_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.05"
            android:contentDescription="@string/send_button_desc"
            android:src="@drawable/send_message_white"
            android:background="@drawable/background_button_send_message"
            android:layout_gravity="center"
            android:layout_marginEnd="5dp"/>
    </LinearLayout>


</LinearLayout>