<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tweet_detail_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/border"
    android:orientation="vertical">

    <Button
        android:id="@+id/tweet_detail_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Retour" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/tweet_detail_material_card_view"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_marginHorizontal="4dp"
            android:layout_marginVertical="4dp"
            app:cardCornerRadius="50dp"
            app:strokeColor="@color/black"
            app:strokeWidth="4dp">

            <ImageView
                android:id="@+id/tweet_detail_profile_picture"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/tweet_profile_picture_content_description"
                android:src="@drawable/profile_picture2" />
        </com.google.android.material.card.MaterialCardView>

        <LinearLayout
            android:id="@+id/tweet_detail_to_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tweet_detail_firstname_lastname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="2dp"
                    android:maxLength="20"
                    android:text="@string/tweet_firstname_lastname"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tweet_detail_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="2dp"
                    android:maxLength="15"
                    android:text="@string/tweet_username"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tweet_detail_publication_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="2dp"
                    android:maxLength="15"
                    android:text="@string/tweet_publication_date"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tweet_detail_content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="2dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/lorem_ipsum"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/tweet_detail_interactions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="start"
                android:orientation="horizontal"
                android:paddingHorizontal="10dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/tweet_detail_comment_icon"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@drawable/comment" />

                    <TextView
                        android:id="@+id/tweet_detail_comment_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:text="23K"
                        android:textColor="@color/black"
                        android:textSize="14sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/tweet_detail_retweet_icon"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@drawable/retweet" />

                    <TextView
                        android:id="@+id/tweet_detail_retweet_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:text="47K"
                        android:textColor="@color/black"
                        android:textSize="14sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/tweet_detail_like_icon"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@drawable/like" />

                    <TextView
                        android:id="@+id/tweet_detail_like_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:text="321K"
                        android:textColor="@color/black"
                        android:textSize="14sp" />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/tweet_detail_content_comment"
            android:layout_width="275dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:backgroundTint="#FFFFFF"
            android:hint="Poster votre Réponse" />

        <Button
            android:id="@+id/tweet_detail_response"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Répondre" />

    </LinearLayout>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/tweet_detail_rv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:itemCount="10"
            tools:listitem="@layout/tweet" />
    </FrameLayout>

</LinearLayout>
